<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2012 Brian Flores

    This file is part of SmokeOrFire.

    SmokeOrFire is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SmokeOrFire is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="prefs">net.votebrian.games.sof.shared_prefs</string>
    <string name="counter_pref">net.votebrian.games.sof.counterPref</string>
    <string name="fail_pref">net.votebrian.games.sof.failPref</string>
    <string name="ad_pref">net.votebrian.games.sof.adPref</string>

    <string name="app_name">Smoke or Fire</string>
    <string name="title">SMOKE / FIRE</string>

    <string name="menu_tutorial">How to Play</string>
    <string name="menu_about">About</string>
    <string name="menu_ads">Remove Ads</string>

    <string name="tutorial">Tutorial</string>
    <string name="tutorial_intro_header">Introduction</string>
    <string name="tutorial_intro">Smoke or Fire is a drinking game.\nThe basic idea is just to guess what the next card will be.\n\n</string>

    <string name="tutorial_buttons_header">What do I do?</string>
    <string name="tutorial_buttons_a">As shown in the image below, this game has five buttons: SMOKE, FIRE, HIGHER, LOWER, and PASS.  If you think the next card will be black, click SMOKE.  IF you think it\'ll be red, click FIRE.\n</string>
    <string name="tutorial_buttons_b">When you start off, you\'ll only have access to SMOKE and FIRE, but once you\'ve got a card on the table, you\'ll be able to select HIGHER and LOWER.\n\nAces are high.\n\n</string>

    <string name="tutorial_social_header">Social!</string>
    <string name="tutorial_social">If the card drawn has the same value as the previous card, everyone takes a drink.\n\n</string>

    <string name="tutorial_incentive_header">Mistakes were made...</string>
    <string name="tutorial_incentive">If you guess wrong, take as many drinks as there are cards on the table.  The cards on the table will be cleared, and the counters will be reset.  You\'ll lose access to the HIGHER and LOWER buttons.\n\n</string>

    <string name="tutorial_passing_header">Passing</string>
    <string name="tutorial_passing">If you manage to get 5 consecutive correct guesses, you\'ll be able to click the PASS bar (lower right).  Clicking that bar resets the PASS count, but not the card/drink count.  Pass the phone to the next guy... make him take your drinks.\n\n</string>


    <string name="about">About</string>
    <string name="copyright">Copyright 2013 Brian Flores</string>
    <string name="version">Smoke or Fire - v2.1\n\n</string>
    <string name="contact">Contact: bflores@gmail.com</string>
    <string name="source">Source/Issues: github.com/votebrian/smoke-or-fire</string>

    <string name="purchase">Purchases</string>
    <string name="ads_purchase_desc">Permanently remove ads</string>
</resources>
